--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,3 +1,8 @@
 <h1>home page</h1>
 
-<%= data %>
+
+<ul>
+    <% data.forEach(function(datum) { %>
+        <li><%= datum.entry %></li>
+    <% }); %>
+</ul>
